Makes lpsidebar and sidebar visually the same, fixes overlay still being visible after window is resized and sidebar is hidden

--- a/less/site.less
+++ b/less/site.less
@@ -47,20 +47,12 @@ a:hover {
   img {
     margin-top: 10px;
   }
-  #owlet-wrap {
-    background-color: #65D2C0;
-    border: 1px solid #65D2C0;
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
-  }
   #owlet-image {
     margin-top: 0;
     width: 80px;
   }
   .menu {
     padding-top: 10px;
-    margin-bottom: -9999px;
-    padding-bottom: 9999px;
     overflow: hidden;
     background-color: @purple;
     a {
@@ -95,7 +87,7 @@ a:hover {
     width: 80px;
   }
   .menu {
-    height: 100%;
+    padding-top: 10px;
     overflow: hidden;
     background-color: @purple;
     a {
@@ -109,7 +101,7 @@ a:hover {
 }
 
 #lpsidebar-overlay {
-  position: absolute;
+  position: fixed;
   min-width: 100%;
   min-height: 100%;
   z-index: 0;
